fix(footer): update text-wrap

--- a/src/components/footer/styles.css
+++ b/src/components/footer/styles.css
@@ -6,6 +6,7 @@ footer {
 }
 
 footer p {
+  text-wrap: pretty;
   text-align: center;
   max-width: 90%;
 }
